@@ -2,6 +2,7 @@
 
 		* VSD: fix ability to save.
 		* XLS: preparation for XLS-specific search.
+		* XLS: search for cell phase 1.
 
 2011-10-23  Valek Filippov
 
